# owl2vault

./: .gitignore  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: architecture.md  cli.md  development.md  examples.md  generators.md  index.md  model.md  sparql.md
owl2vault/: __init__.py  cli.py  docsify_writer.py  hugo_writer.py  linkml_writer.py  loader.py  mkdocs_writer.py  model.py  note_id.py  obsidian_writer.py
tests/: conftest.py  test_cli_paths.py  test_note_id.py  test_smoke.py
